--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -515,8 +515,11 @@ EstimateScreen As screen:
                         MaxLength: =Parent.MaxLength
                         Mode: =TextMode.MultiLine
                         OnChange: |
-                            =Set(VarNotesSummary,IntxtMaterial.Text);
-                        OnSelect: =Set(VarNotes,true)
+                            =// store material in variable
+                            Set(VarNotesSummary,IntxtMaterial.Text);
+                        OnSelect: |-
+                            =// to show label
+                            Set(VarNotes,true)
                         PaddingLeft: =5
                         RadiusBottomLeft: =0
                         RadiusBottomRight: =0
@@ -528,36 +531,6 @@ EstimateScreen As screen:
                         X: =30
                         Y: =lblMaterial.Y + lblMaterial.Height + 5
                         ZIndex: =2
-
-                    ErrorMessageMaterial As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =24
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =IntxtMaterial.Y + IntxtMaterial.Height
-                        ZIndex: =3
-
-                    StarVisibleMaterial As label:
-                        Align: =Align.Center
-                        Color: =RGBA(255, 0, 0, 1)
-                        Font: =Font.Arial
-                        Height: =IntxtMaterial.Height
-                        Size: =21
-                        Text: ="*"
-                        VerticalAlign: =VerticalAlign.Top
-                        Visible: =false
-                        Width: =30
-                        Wrap: =false
-                        Y: =lblMaterial.Y
-                        ZIndex: =4
 
                 UnitDown As typedDataCard.comboBoxOptionSetSingleEditCard:
                     BorderColor: =RGBA(0, 0, 0, 1)
