--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -589,34 +589,6 @@ EstimateScreen As screen:
                     Y: =3
                     ZIndex: =1
 
-                    ErrorMessageAdditionalExpensesRequired As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =24
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =
-                        ZIndex: =3
-
-                    StarVisibleAdditonalExpensesRequired As label:
-                        Align: =Align.Center
-                        Font: =Font.Arial
-                        Height: =
-                        Size: =21
-                        Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                        Width: =30
-                        Wrap: =false
-                        Y: =
-                        ZIndex: =4
-
                     CboxAdditionalExpensesRequired As checkbox:
                         BorderColor: =RGBA(0, 0, 0, 0)
                         CheckboxBorderColor: =RGBA(116, 116, 116, 1)
@@ -626,8 +598,11 @@ EstimateScreen As screen:
                         HoverBorderColor: =
                         HoverColor: =RGBA(0, 0, 0, 1)
                         OnCheck: |-
-                            =Set(VarAdditionExpenseSummary,CboxAdditionalExpensesRequired.Value);
+                            =// to store additional expenses required value in variable
+                            Set(VarAdditionExpenseSummary,CboxAdditionalExpensesRequired.Value);
+                            // to show label
                             Set(VarAdditionExpense,true);Reset(IntxtTotalEstimatedHoursofTravel);
+                            // to hide label
                             Set(VarTotalEstimatesExpense,false);
                         OnUncheck: |
                             =Set(VarAdditionExpenseSummary,CboxAdditionalExpensesRequired.Value);
@@ -694,8 +669,12 @@ EstimateScreen As screen:
                         HoverBorderColor: =RGBA(149, 149, 149, 1)
                         HoverFill: =RGBA(255, 255, 255, 1)
                         MaxLength: =Parent.MaxLength
-                        OnChange: =Set(VarTotalEstimateExpenseSummary,Text(Value(IntxtTotalEstimatedExpense.Text),"0.00"));
-                        OnSelect: =Set(VarTotalEstimatesExpense,true)
+                        OnChange: |-
+                            =// store total estimated expense value in variable
+                            Set(VarTotalEstimateExpenseSummary,Text(Value(IntxtTotalEstimatedExpense.Text),"0.00"));
+                        OnSelect: |-
+                            =// to show label
+                            Set(VarTotalEstimatesExpense,true)
                         PaddingLeft: =5
                         RadiusBottomLeft: =0
                         RadiusBottomRight: =0
@@ -707,36 +686,6 @@ EstimateScreen As screen:
                         X: =60
                         Y: =lblTotalEstimatedExpense.Y + lblTotalEstimatedExpense.Height + 5
                         ZIndex: =3
-
-                    ErrorMessagelblTotalEstimatedExpense As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =IntxtTotalEstimatedExpense.Y + IntxtTotalEstimatedExpense.Height
-                        ZIndex: =4
-
-                    StarVisiblelblTotalEstimatedExpense As label:
-                        Align: =Align.Center
-                        Color: =RGBA(255, 0, 0, 1)
-                        Font: =Font.Arial
-                        Height: =lblTotalEstimatedExpense.Height
-                        Size: =21
-                        Text: ="*"
-                        VerticalAlign: =VerticalAlign.Top
-                        Visible: =false
-                        Width: =30
-                        Wrap: =false
-                        X: =30
-                        Y: =lblTotalEstimatedExpense.Y
-                        ZIndex: =5
 
                 TravelRequired As typedDataCard.comboBoxOptionSetSingleEditCard:
                     BorderStyle: =BorderStyle.Solid
@@ -753,34 +702,6 @@ EstimateScreen As screen:
                     Y: =5
                     ZIndex: =1
 
-                    ErrorMessageTravelRequired As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =24
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =
-                        ZIndex: =3
-
-                    StarVisibleTravelRequired As label:
-                        Align: =Align.Center
-                        Font: =Font.Arial
-                        Height: =
-                        Size: =21
-                        Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                        Width: =30
-                        Wrap: =false
-                        Y: =
-                        ZIndex: =4
-
                     CboxTravelRequired As checkbox:
                         BorderColor: =RGBA(0, 0, 0, 0)
                         CheckboxBorderColor: =RGBA(116, 116, 116, 1)
@@ -790,8 +711,11 @@ EstimateScreen As screen:
                         HoverBorderColor: =
                         HoverColor: =RGBA(0, 0, 0, 1)
                         OnCheck: |-
-                            =Set(VarTravelSummary,CboxTravelRequired.Value);
+                            =// store travel required value in variable
+                            Set(VarTravelSummary,CboxTravelRequired.Value);
+                            // to show label
                             Set(VarTravel,true);Reset(IntxtTotalEstimatedHoursofTravel);
+                            // to hide label
                             Set(VarTotalEstimateHoursfortravel,false);
                         OnUncheck: |-
                             =Set(VarTravelSummary,CboxTravelRequired.Value);
@@ -857,8 +781,12 @@ EstimateScreen As screen:
                         HoverBorderColor: =RGBA(149, 149, 149, 1)
                         HoverFill: =RGBA(255, 255, 255, 1)
                         MaxLength: =3
-                        OnChange: =Set(VarTotalEstimateHoursofTravelSummary,IntxtTotalEstimatedHoursofTravel.Text)
-                        OnSelect: =Set(VarTotalEstimateHoursfortravel,true)
+                        OnChange: |-
+                            =// store total estimated hours of travel in variable
+                            Set(VarTotalEstimateHoursofTravelSummary,IntxtTotalEstimatedHoursofTravel.Text)
+                        OnSelect: |-
+                            =// to show label
+                            Set(VarTotalEstimateHoursfortravel,true)
                         PaddingLeft: =5
                         RadiusBottomLeft: =0
                         RadiusBottomRight: =0
@@ -870,36 +798,6 @@ EstimateScreen As screen:
                         X: =60
                         Y: =lblTotalEstimatedHoursofTravel.Y + lblTotalEstimatedHoursofTravel.Height + 5
                         ZIndex: =3
-
-                    ErrorMessageTotalEstimatedHoursofTravel As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =IntxtTotalEstimatedHoursofTravel.Y + IntxtTotalEstimatedHoursofTravel.Height
-                        ZIndex: =4
-
-                    StarVisibleTotalEstimatedHoursofTravel As label:
-                        Align: =Align.Center
-                        Color: =RGBA(255, 0, 0, 1)
-                        Font: =Font.Arial
-                        Height: =lblTotalEstimatedHoursofTravel.Height
-                        Size: =21
-                        Text: ="*"
-                        VerticalAlign: =VerticalAlign.Top
-                        Visible: =false
-                        Width: =30
-                        Wrap: =false
-                        X: =30
-                        Y: =lblTotalEstimatedHoursofTravel.Y
-                        ZIndex: =5
 
                 CommunicatedtoCustomer As typedDataCard.comboBoxOptionSetSingleEditCard:
                     BorderColor: =RGBA(202, 202, 202, 1)
@@ -918,34 +816,6 @@ EstimateScreen As screen:
                     Y: =7
                     ZIndex: =1
 
-                    ErrorMessageCommunicatedtoCustomer As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =24
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =
-                        ZIndex: =3
-
-                    StarVisibleCommunicatedtoCustomer As label:
-                        Align: =Align.Center
-                        Font: =Font.Arial
-                        Height: =
-                        Size: =21
-                        Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                        Width: =30
-                        Wrap: =false
-                        Y: =
-                        ZIndex: =4
-
                     CboxCommunicatedtoCustomer As checkbox:
                         BorderColor: =RGBA(0, 0, 0, 0)
                         CheckboxBorderColor: =RGBA(116, 116, 116, 1)
@@ -955,14 +825,20 @@ EstimateScreen As screen:
                         HoverBorderColor: =
                         HoverColor: =RGBA(0, 0, 0, 1)
                         OnCheck: |-
-                            =//Store value of CboxCommunicatedtoCustomer into  VarCommunicationSummary variable);
+                            =//Store value of CboxCommunicatedtoCustomer into  VarCommunicationSummary variable;
                             Set(VarCommunicationSummary,CboxCommunicatedtoCustomer.Value);
-                            Set(VarCommunication,true);Reset(IntxtContactName);Reset(IntxtContactNumberES);
+                            //to show label
+                            Set(VarCommunication,true);
+                            Reset(IntxtContactName);Reset(IntxtContactNumberES);
+                            //to hide label
                             Set(VarCustomerName,false);
+                            // to hide label
                             Set(varCustomerPhonenumber,false);
+                            // to hide label
                             Set(varContactNumber,false);
+                            // set blank 
                             Set(varContactCurrent, Blank());
-                            Set(varPhoneNumber,Blank())
+                            Set(varPhoneNumber,Blank());
                         OnUncheck: |-
                             =Set(VarCommunicationSummary,CboxCommunicatedtoCustomer.Value);Set(VarCommunication,false);Reset(IntxtContactName);Reset(IntxtContactNumberES);Set(VarCustomerNameSummary,Blank());
                             Set(VarformattedNumberSummary,Blank());
