--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -2070,7 +2070,7 @@ LeadSummaryScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =1
 
-                imgNotificationLSS_1 As image:
+                imgNotificationerrorLSS As image:
                     Height: =Parent.Height
                     Image: =error
                     PaddingTop: =30
