--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -41,7 +41,9 @@ SubmittedLeadScreen As screen:
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =Parent.Height
                 Icon: =Icon.Hamburger
-                OnSelect: =Set(varshowMenu,!varshowMenu)
+                OnSelect: |-
+                    =// to expand collapse menubar
+                    Set(varshowMenu,!varshowMenu)
                 PaddingBottom: =Parent.Height/3
                 PaddingTop: =Parent.Height/3
                 Width: =Parent.Height/2
@@ -54,7 +56,9 @@ SubmittedLeadScreen As screen:
                 DisplayMode: =DisplayMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =Parent.Height
-                Image: ='1x'
+                Image: |-
+                    =// Schindler Logo
+                    '1x'
                 LayoutMinHeight: =320
                 LayoutMinWidth: =320
                 PaddingBottom: =5
@@ -113,7 +117,8 @@ SubmittedLeadScreen As screen:
                 RadiusTopRight: =50
                 Size: =If(Parent.Width<500,11,Parent.Width>500,12,12)
                 Text: |-
-                    =Left(User().FullName, 1) &
+                    =// username
+                    Left(User().FullName, 1) &
                     Mid(
                         User().FullName,
                         Find(" ", User().FullName) + 1,
@@ -151,14 +156,6 @@ SubmittedLeadScreen As screen:
                 Text: =If( Header = "InProgress","In Progress" ,Header) &" Leads"
                 Width: =Parent.Width
                 ZIndex: =1
-
-            lblYearSLS As label:
-                Align: =Align.Right
-                Height: =Parent.Height
-                PaddingRight: =40
-                Text: =//If(toggleYearDS.Value=true,toggleYearDS.TrueText,toggleYearDS.FalseText)
-                Width: =Parent.Width
-                ZIndex: =2
 
         ctnMiddleSLS As groupContainer.manualLayoutContainer:
             Fill: =RGBA(255, 255, 255, 1)
@@ -231,7 +228,7 @@ SubmittedLeadScreen As screen:
                     Y: =000
                     ZIndex: =2
 
-            ctnSearchBarSLS_1 As groupContainer.horizontalAutoLayoutContainer:
+            ctnSearchBarSubmittedLeadsScreen As groupContainer.horizontalAutoLayoutContainer:
                 DropShadow: =DropShadow.None
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =80
@@ -245,7 +242,7 @@ SubmittedLeadScreen As screen:
                 Y: =ctnSearchBarSLS.Height
                 ZIndex: =6
 
-                Label4_1 As label:
+                lblSortSLS As label:
                     Align: =Align.Right
                     Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
@@ -255,12 +252,12 @@ SubmittedLeadScreen As screen:
                     Text: ="Sort by column"
                     Width: |-
                         =//If(Parent.Width>500,Parent.Width/2.4,Parent.Width/3)
-                        Parent.Width-ComboBox1.Width-Icon1.Width-20
+                        Parent.Width-cboxSortolumnsSLS.Width-iconSortSLS.Width-20
                     X: =Parent.Width-Self.Width
                     Y: =10
                     ZIndex: =1
 
-                ComboBox1 As combobox:
+                cboxSortolumnsSLS As combobox:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     ChevronBackground: =RGBA(255, 0, 0, 1)
                     ChevronHoverBackground: =Self.ChevronBackground
@@ -285,7 +282,7 @@ SubmittedLeadScreen As screen:
                     Width: =180
                     ZIndex: =2
 
-                Icon1 As icon.ArrowsUpDown:
+                iconSortSLS As icon.ArrowsUpDown:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     Color: =RGBA(255, 0, 0, 1)
                     Height: =40
@@ -294,13 +291,13 @@ SubmittedLeadScreen As screen:
                         =// this icon is use for sorting .sorting is set on variable VarUpperIcon and VarDownIcon.
                         
                         If(
-                            Icon1.Icon = Icon.ArrowDown,
+                            iconSortSLS.Icon = Icon.ArrowDown,
                             Set(
                                 VarUpperIcon,
                                 true
                             );
                             Set(VarDownIcon,false);,
-                            Icon1.Icon = Icon.ArrowUp,
+                            iconSortSLS.Icon = Icon.ArrowUp,
                             Set(
                                 VarDownIcon,
                                 true
@@ -317,7 +314,7 @@ SubmittedLeadScreen As screen:
 
             "glryLeadsSLS As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver4.0'":
                 BorderColor: =RGBA(202, 202, 202, 1)
-                Height: =Parent.Height-ctnSearchBarSLS.Height-ctnSearchBarSLS_1.Height-20
+                Height: =Parent.Height-ctnSearchBarSLS.Height-ctnSearchBarSubmittedLeadsScreen.Height-20
                 Items: |-
                     =//lead list shown by status  and user mail also sort on created on. also SortBycolumns and search functions are added beacause we give user to search lead by column and also give dropdown of columns for sorting .
                     SortByColumns(
@@ -341,14 +338,14 @@ SubmittedLeadScreen As screen:
                             "shlrf_zipcode","shlrf_leadtrackingnumber"
                     
                         ),
-                      If(ComboBox1.Selected.Value="Created Date","createdon",ComboBox1.Selected.Value="QQ Team Name","shlrf_qqteamname",ComboBox1.Selected.Value="Mechanic Name","shlrf_mechanicname",ComboBox1.Selected.Value="Contract No.","shlrf_contractnumber",ComboBox1.Selected.Value="Lead Tracking No.","shlrf_leadtrackingnumber",ComboBox1.Selected.Value="Building Name","shlrf_buildingname",ComboBox1.Selected.Value="Address","shlrf_address",ComboBox1.Selected.Value="Lead Status","shlrf_leadstatus"),If(Icon1.Icon=Icon.ArrowDown,SortOrder.Descending,Icon1.Icon=Icon.ArrowUp,SortOrder.Ascending,SortOrder.Descending)
+                      If(cboxSortolumnsSLS.Selected.Value="Created Date","createdon",cboxSortolumnsSLS.Selected.Value="QQ Team Name","shlrf_qqteamname",cboxSortolumnsSLS.Selected.Value="Mechanic Name","shlrf_mechanicname",cboxSortolumnsSLS.Selected.Value="Contract No.","shlrf_contractnumber",cboxSortolumnsSLS.Selected.Value="Lead Tracking No.","shlrf_leadtrackingnumber",cboxSortolumnsSLS.Selected.Value="Building Name","shlrf_buildingname",cboxSortolumnsSLS.Selected.Value="Address","shlrf_address",cboxSortolumnsSLS.Selected.Value="Lead Status","shlrf_leadstatus"),If(iconSortSLS.Icon=Icon.ArrowDown,SortOrder.Descending,iconSortSLS.Icon=Icon.ArrowUp,SortOrder.Ascending,SortOrder.Descending)
                     )
                 Layout: =Layout.Vertical
                 TemplatePadding: =0
                 TemplateSize: =220
                 Width: =If(Parent.Width>1000,Parent.Width,Parent.Width/1.05)
                 X: =20
-                Y: =ctnSearchBarSLS_1.Height+ctnSearchBarSLS_1.Height
+                Y: =ctnSearchBarSubmittedLeadsScreen.Height+ctnSearchBarSubmittedLeadsScreen.Height
                 ZIndex: =7
 
                 borderLeadsSLS As rectangle:
@@ -508,10 +505,10 @@ SubmittedLeadScreen As screen:
                     Visible: =If(Header="InProgress",true,false)
                     Width: =Parent.Width/1.08
                     X: =10
-                    Y: =htmltxtStatusDateSLS_1.Y+htmltxtStatusDateSLS_1.Height
+                    Y: =htmltxtStatusDateSLS.Y+htmltxtStatusDateSLS.Height
                     ZIndex: =10
 
-                htmltxtStatusDateSLS_1 As htmlViewer:
+                htmltxtStatusDateSLS As htmlViewer:
                     AutoHeight: =true
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
