--- a/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
@@ -528,7 +528,7 @@ RejectedLeads As screen:
                     Y: =htmltxtDateSLS_1.Y+htmltxtDateSLS_1.Height
                     ZIndex: =23
 
-    grpMenuSLS_1 As group:
+    grpMenuRS As group:
         Height: =5
         Width: =5
         X: =40
@@ -543,11 +543,11 @@ RejectedLeads As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =2
 
-        "glryMenuBarSLS_1 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+        "glryMenuBarRS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
             BorderColor: =RGBA(255, 255, 255, 1)
             BorderThickness: =1
             Fill: =RGBA(237, 237, 237, 1)
-            Height: =1.08*(CountRows(glryMenuBarSLS_1.AllItems)*(glryMenuBarSLS_1.TemplateHeight))
+            Height: =1.08*(CountRows(glryMenuBarRS.AllItems)*(glryMenuBarRS.TemplateHeight))
             Items: =Menu
             Layout: =Layout.Vertical
             ShowScrollbar: =false
@@ -558,7 +558,7 @@ RejectedLeads As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
 
-            ctnMenuSLS_1 As groupContainer.manualLayoutContainer:
+            ctnMenuRS As groupContainer.manualLayoutContainer:
                 DropShadow: =DropShadow.ExtraBold
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =80
