--- a/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
@@ -535,7 +535,7 @@ RejectedLeads As screen:
         Y: =80
         ZIndex: =4
 
-        ctnBackgroundMenuSLS_1 As groupContainer.manualLayoutContainer:
+        ctnBackgroundMenuRS As groupContainer.manualLayoutContainer:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
