--- a/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
@@ -118,7 +118,7 @@ RejectedLeads As screen:
                 Width: =If(Parent.Width<500,Parent.Height/1.8,Parent.Height/1.6)
                 ZIndex: =5
 
-        ctnUserNameSLS_1 As groupContainer.manualLayoutContainer:
+        ctnLeadsRS As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
             FillPortions: =0
             Height: |-
@@ -133,7 +133,7 @@ RejectedLeads As screen:
             Y: =ctnHeaderRS.Y+ctnHeaderRS.Height+10
             ZIndex: =2
 
-            btnheaderSLS_1 As button:
+            btnheaderRS As button:
                 Align: =Align.Left
                 Color: =RGBA(0, 0, 0, 1)
                 DisplayMode: =DisplayMode.View
@@ -149,19 +149,11 @@ RejectedLeads As screen:
                 Width: =Parent.Width
                 ZIndex: =1
 
-            lblYearSLS_1 As label:
-                Align: =Align.Right
-                Height: =Parent.Height
-                PaddingRight: =40
-                Text: =//If(toggleYearDS.Value=true,toggleYearDS.TrueText,toggleYearDS.FalseText)
-                Width: =Parent.Width
-                ZIndex: =2
-
-        ctnMiddleSLS_1 As groupContainer.manualLayoutContainer:
+        ctnMiddleRS As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
-            Height: =Parent.Height-ctnUserNameSLS_1.Height-ctnHeaderRS.Height
+            Height: =Parent.Height-ctnLeadsRS.Height-ctnHeaderRS.Height
             LayoutMinHeight: =100
             LayoutMinWidth: =250
             PaddingLeft: =10
@@ -316,14 +308,14 @@ RejectedLeads As screen:
                     Width: =40
                     ZIndex: =3
 
-            "glryLeadsSLS_1 As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver4.0'":
+            "glryLeadsRS As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver4.0'":
                 Height: =Parent.Height-ctnSearchBarSLS_2.Height-ctnSearchBarSLS_3.Height-20
                 Items: |-
                     =SortByColumns(Search(Sort(Filter(LeadInformations,//Email=User().Email  && 
                     LeadStatus=Header&&Email=User().Email),'Created On',SortOrder.Descending),IntxtSearchBoxSLS_1.Text,"shlrf_contractnumber","shlrf_address","shlrf_buildingname","shlrf_zipcode","shlrf_leadtrackingnumber"),If(ComboBox1_1.Selected.Value="Created Date","createdon",ComboBox1_1.Selected.Value="QQ Team Name","shlrf_qqteamname",ComboBox1_1.Selected.Value="Mechanic Name","shlrf_mechanicname",ComboBox1_1.Selected.Value="Contract No.","shlrf_contractnumber",ComboBox1_1.Selected.Value="Lead Tracking No.","shlrf_leadtrackingnumber",ComboBox1_1.Selected.Value="Building Name","shlrf_buildingname",ComboBox1_1.Selected.Value="Address","shlrf_address",ComboBox1_1.Selected.Value="Lead Status","shlrf_leadstatus"),If(Icon1_1.Icon=Icon.ArrowDown,SortOrder.Descending,Icon1_1.Icon=Icon.ArrowUp,SortOrder.Ascending,SortOrder.Descending))
                 Layout: =Layout.Vertical
                 TemplatePadding: =0
-                TemplateSize: =If(btnheaderSLS_1.Text="Rejected Leads",240+htmltxtQQTeamMemberSLS_3.Height)
+                TemplateSize: =If(btnheaderRS.Text="Rejected Leads",240+htmltxtQQTeamMemberSLS_3.Height)
                 Width: =If(Parent.Width>1000,Parent.Width,Parent.Width/1.05)
                 X: =20
                 Y: =ctnSearchBarSLS_3.Height+ctnSearchBarSLS_3.Y
